--- a/front-end/to-do_app/src/components/SearchModal/SearchModal.css
+++ b/front-end/to-do_app/src/components/SearchModal/SearchModal.css
@@ -8,7 +8,7 @@ form {
   width: 70%;
   padding: 24px;
   border: 1px solid grey;
-  margin: 48px auto;
+  margin: 48px auto 0 auto;
   display: flex;
   flex-direction: column;
   gap: 12px;
