--- a/front-end/to-do_app/src/components/AddModal/AddModal.css
+++ b/front-end/to-do_app/src/components/AddModal/AddModal.css
@@ -14,10 +14,34 @@
   /* background-color: rgb(0, 0, 0);  Fallback color */
   /*background-color: rgba(0, 0, 0, 0.4); Black w/ opacity */
   .modal__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fefefe;
     /* margin: auto; */
     border: 1px solid #888;
     width: 50%;
     height: 87%;
   }
+}
+
+.textbox__container {
+  width: 100%;
+}
+
+.calendar__time {
+  border: 1px solid #888;
+  width: 100%;
+  height: 70%;
+}
+
+.buttons__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  button {
+    margin: 0.5rem 0;
+  }
+  height: 23%;
+  width: 100%;
 }
