--- a/front-end/to-do_app/src/components/Button/Button.css
+++ b/front-end/to-do_app/src/components/Button/Button.css
@@ -7,9 +7,27 @@
 }
 
 .button__open__modal {
+  margin: 0.5rem 0;
+  border-radius: 2rem;
   height: 4rem;
   width: 12rem;
   font-size: 1.1rem;
+  background-color: #0197f6;
+  color: #ece8e8;
+}
+
+.button__large__gray,
+.button__large__blue {
+  height: 2.5rem;
+  width: 90%;
+}
+
+.button__large__gray {
+  background-color: #ece8e8;
+  color: #0197f6;
+}
+
+.button__large__blue {
   background-color: #0197f6;
   color: #ece8e8;
 }
