--- a/front-end/to-do_app/src/components/Button/Button.css
+++ b/front-end/to-do_app/src/components/Button/Button.css
@@ -22,6 +22,13 @@
   width: 90%;
 }
 
+.button__pagination {
+  border: none;
+  border-radius: 2rem;
+  height: 2rem;
+  width: 2rem;
+}
+
 .button__blue {
   background-color: #0197f6;
   color: #ece8e8;
