--- a/front-end/to-do_app/src/components/AddModal/AddModal.css
+++ b/front-end/to-do_app/src/components/AddModal/AddModal.css
@@ -1,11 +1,11 @@
 .add__modal {
   /* display: none; Hidden by default */
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   justify-content: center;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 35%; /* Location of the box */
+  /*padding-top: 20%;  Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -13,35 +13,49 @@
   overflow: auto; /* Enable scroll if needed */
   /* background-color: rgb(0, 0, 0);  Fallback color */
   /*background-color: rgba(0, 0, 0, 0.4); Black w/ opacity */
-  .modal__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fefefe;
-    /* margin: auto; */
-    border: 1px solid #888;
-    width: 50%;
-    height: 87%;
+}
+
+.modal__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  background-color: #fefefe;
+  border: 1px solid #888;
+  width: 50%;
+  height: fit-content;
+  label {
+    font-size: 0.9rem;
+  }
+  input {
+    width: 90%;
   }
 }
 
-.textbox__container {
-  width: 100%;
-}
-
-.calendar__time {
+.input__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid #888;
   width: 100%;
   height: 70%;
+  > * {
+    width: 95% !important;
+    margin: 0.7rem 0.4rem;
+  }
+  select {
+    position: relative;
+    right: 0;
+  }
 }
 
 .buttons__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: auto;
+  width: 100%;
   button {
     margin: 0.5rem 0;
   }
-  height: 23%;
-  width: 100%;
 }
