--- a/front-end/to-do_app/src/components/Pagination/Pagination.css
+++ b/front-end/to-do_app/src/components/Pagination/Pagination.css
@@ -1,8 +1,10 @@
 .pagination {
   display: flex;
-  height: 100%;
+  height: fit-content;
   width: 40%;
   border: 1px solid grey;
   align-items: center;
   justify-content: center;
+  margin-top: 0.5rem;
+  gap: 0.5rem;
 }
