--- a/front-end/to-do_app/src/components/BottomContainer/BottomContainer.css
+++ b/front-end/to-do_app/src/components/BottomContainer/BottomContainer.css
@@ -7,7 +7,8 @@
 
 .buttons {
   display: flex;
-  padding: 0.5rem 2rem 0.3rem 0;
+  width: 100%;
+  padding: 0.5rem 2rem 0.3rem 2rem;
   gap: 1.5rem;
-  justify-content: center;
+  justify-content: space-between;
 }
