--- a/front-end/to-do_app/src/components/Button/Button.css
+++ b/front-end/to-do_app/src/components/Button/Button.css
@@ -29,6 +29,20 @@
   width: 2rem;
 }
 
+.button__actions {
+  border: none;
+  border-radius: 1rem;
+  height: 1.3rem;
+  width: 3.5rem;
+}
+
+.button__close {
+  border: none;
+  border-radius: 3rem;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
 .button__blue {
   background-color: #0197f6;
   color: #ece8e8;
@@ -42,4 +56,14 @@
 .button__gray {
   background-color: #ece8e8;
   color: #0197f6;
+}
+
+.button__yellow {
+  background-color: #ffd32c;
+  color: #000080;
+}
+
+.button__red {
+  background-color: #c70000;
+  color: whitesmoke;
 }
