--- a/front-end/to-do_app/src/components/Button/Button.css
+++ b/front-end/to-do_app/src/components/Button/Button.css
@@ -43,6 +43,14 @@
   width: 1.5rem;
 }
 
+.button__sort {
+  border: none;
+  border-radius: 0.5rem;
+  height: 2rem;
+  width: 3rem;
+  font-size: 1rem;
+}
+
 .button__blue {
   background-color: #0197f6;
   color: #ece8e8;
